--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
   "name": "portfolio",
+  "private": true,
+  "type": "module",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mdi/font": "6.2.95",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
-    "pwa": "^1.9.7",
+    "@mdi/font": "7.4.47",
     "roboto-fontface": "*",
-    "vue": "^3.4.21",
-    "vue-router": "^4.0.13",
-    "vuetify": "^3.5.8"
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
-    "@babel/types": "^7.24.0",
-    "@types/node": "^20.11.25",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "sass": "^1.71.1",
-    "typescript": "^5.4.2",
+    "@eslint/js": "^9.14.0",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.14.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "sass": "1.77.8",
+    "sass-embedded": "^1.77.8",
     "unplugin-fonts": "^1.1.1",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.1.5",
-    "vite-plugin-pwa": "^0.20.5",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.4.0",
     "vite-plugin-vuetify": "^2.0.3",
-    "vue-tsc": "^2.0.6"
+    "vue-router": "^4.4.0"
   }
 }
