--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "portfolio",
-  "private": true,
-  "type": "module",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
@@ -30,7 +31,9 @@
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.4.0",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.4.0"
-  }
+  },
+  "type": "module"
 }
