refeito em quasar

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,20 +1,3 @@
 {
-  "compilerOptions": {
-    "allowJs": true,
-    "target": "es5",
-    "module": "esnext",
-    "baseUrl": "./",
-    "moduleResolution": "bundler",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
-  }
+  "extends": "./.quasar/tsconfig.json"
 }
