--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "portfolio",
-  "version": "0.0.0",
+  "name": "site-quasar",
+  "version": "0.0.1",
+  "description": "A Quasar Project",
+  "productName": "Quasar App",
+  "author": "Emanuel Almeida <emanuelangelo@outlook.com.br>",
+  "type": "module",
   "private": true,
   "scripts": {
-    "build": "vite build",
-    "lint": "eslint . --fix",
-    "dev": "vite",
-    "preview": "vite preview"
+    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
+    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "@mdi/font": "7.4.47",
-    "register-service-worker": "^1.7.2",
-    "roboto-fontface": "*",
-    "vue": "^3.4.31",
-    "vuetify": "^3.6.14"
+    "@mdi/font": "^7.4.47",
+    "@quasar/extras": "^1.16.4",
+    "quasar": "^2.16.0",
+    "vue": "^3.4.18",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/cli-plugin-pwa": "~5.0.0",
+    "@quasar/app-vite": "^2.0.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^9.14.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.30.0",
-    "sass": "1.77.8",
-    "sass-embedded": "^1.77.8",
-    "unplugin-fonts": "^1.1.1",
-    "unplugin-vue-components": "^0.27.2",
-    "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.4.0",
-    "vite-plugin-pwa": "^0.21.1",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vue-router": "^4.4.0"
+    "globals": "^15.12.0",
+    "postcss": "^8.4.14",
+    "prettier": "^3.3.3",
+    "vite-plugin-checker": "^0.8.0"
   },
-  "type": "module"
+  "engines": {
+    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
+  }
 }
