--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,22 @@
 .DS_Store
-.thumbs.db
 node_modules
-
-# Quasar core related directories
-.quasar
 /dist
-/quasar.config.*.temporary.compiled*
 
-# Cordova related directories and files
-/src-cordova/node_modules
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
-
-# Capacitor related directories and files
-/src-capacitor/www
-/src-capacitor/node_modules
+# local env files
+.env.local
+.env.*.local
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-
-# local .env files
-.env.local*
+*.sw?
